--- a/.github/workflows/build-openwrt-k2p.yml
+++ b/.github/workflows/build-openwrt-k2p.yml
@@ -21,7 +21,7 @@ on:
 
 env:
   REPO_URL: https://git.openwrt.org/openwrt/openwrt.git
-  REPO_BRANCH: openwrt-23.05
+  REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: .config
   DIY_P1_SH: k2p-part1.sh
