--- a/.github/workflows/build-openwrt-k2p.yml
+++ b/.github/workflows/build-openwrt-k2p.yml
@@ -47,7 +47,10 @@ jobs:
       run: |
         sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
         sudo -E apt-get -qq update
-        sudo -E apt-get -qq install $(curl -fsSL git.io/depends-ubuntu-2004)
+        sudo -E apt-get -qq install $(curl -fsSL git.io/depends-ubuntu-2004)#Ubuntu 20.04
+        #sudo -E apt-get -qq install $(curl -fsSL git.io/depends-ubuntu-2104)#ubuntu-latest也就是Ubuntu 21.04
+        sudo apt-get update
+        sudo apt-get install gettext
         sudo -E apt-get -qq autoremove --purge
         sudo -E apt-get -qq clean
         sudo timedatectl set-timezone "$TZ"
