--- a/.github/workflows/build-openwrt-k2p.yml
+++ b/.github/workflows/build-openwrt-k2p.yml
@@ -39,7 +39,7 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@main
+      uses: actions/checkout@v3
 
     - name: Initialization environment
       env:
@@ -47,10 +47,7 @@ jobs:
       run: |
         sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
         sudo -E apt-get -qq update
-        sudo -E apt-get -qq install $(curl -fsSL git.io/depends-ubuntu-2004)#Ubuntu 20.04
-        #sudo -E apt-get -qq install $(curl -fsSL git.io/depends-ubuntu-2104)#ubuntu-latest也就是Ubuntu 21.04
-        sudo apt-get update
-        sudo apt-get install gettext
+        sudo -E apt-get -qq install $(curl -fsSL git.io/depends-ubuntu-2004)#Ubuntu 20.04依赖
         sudo -E apt-get -qq autoremove --purge
         sudo -E apt-get -qq clean
         sudo timedatectl set-timezone "$TZ"
