--- a/.config
+++ b/.config
@@ -5001,10 +5001,10 @@ CONFIG_PACKAGE_luci-app-zerotier=y
 #
 # 4. Themes
 #
-# CONFIG_PACKAGE_luci-theme-argon is not set
+CONFIG_PACKAGE_luci-theme-argon=y
 # CONFIG_PACKAGE_luci-theme-argon-mod is not set
 # CONFIG_PACKAGE_luci-theme-bootstrap=y is not set
-# CONFIG_PACKAGE_luci-theme-material=y
+CONFIG_PACKAGE_luci-theme-material=y
 # CONFIG_PACKAGE_luci-theme-netgear is not set
 # end of 4. Themes
 
@@ -5049,7 +5049,7 @@ CONFIG_PACKAGE_luci-lib-nixio_openssl=y
 
 CONFIG_PACKAGE_default-settings=y
 # CONFIG_PACKAGE_luci-i18n-accesscontrol-zh-cn is not set
-# CONFIG_PACKAGE_luci-i18n-argon-config-zh-cn is not set
+CONFIG_PACKAGE_luci-i18n-argon-config-zh-cn
 CONFIG_PACKAGE_luci-i18n-arpbind-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-autoreboot-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-base-ca is not set
