--- a/.github/workflows/build-openwrt-k2p.yml
+++ b/.github/workflows/build-openwrt-k2p.yml
@@ -47,7 +47,7 @@ jobs:
       run: |
         sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
         sudo -E apt-get -qq update
-        sudo -E apt-get -qq install $(curl -fsSL git.io/depends-ubuntu-2004)
+        sudo -E apt-get -y install $(curl -fsSL https://is.gd/depend_ubuntu2204_openwrt)
         sudo -E apt-get install build-essential libncurses5-dev zlib1g-dev gawk git ccache gettext libssl-dev xsltproc wget unzip python3 python3-distutils python3-dev libffi-dev liblzma-dev
         sudo -E apt-get -qq autoremove --purge
         sudo -E apt-get -qq clean
